# OneWeekeendRayTracer

./: .gitignore  Cargo.toml  README.md  test.ppm
src/: camera.rs  main.rs  random_utils.rs  ray.rs  ray_image.rs  types.rs  vec_utils.rs
src/hittable/: hit_record.rs  hittable_list.rs  mod.rs  sphere.rs  square.rs
src/material/: lambertian.rs  metal.rs  mod.rs
