[package]
name = "rust_ray_cast_weekend"
version = "0.1.0"
authors = ["Nikolaj Østergaard <niko.fris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.25.4"
nalgebra-glm = "0.11.0"
image = "0.23.14"